# githubChallenge

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ai_generation.py  basic_usage.py  visualizations.py
src/quantumviz/: __init__.py
src/quantumviz/ai/: __init__.py  copilot.py  optimizer.py  parser.py
src/quantumviz/cli/: __init__.py  main.py
src/quantumviz/core/: __init__.py  algorithms.py  gates.py  noise.py  quantum_state.py  simulator.py
src/quantumviz/utils/: __init__.py  config.py  export.py  helpers.py
src/quantumviz/visualization/: __init__.py  animation.py  bloch.py  circuit_drawer.py  themes.py
